idea/testData/checker/regression/callVariableAsFunctionWithLambdaArg.fir.kt
fun f() {
    val g = 3
    <error descr="[UNRESOLVED_REFERENCE] Unresolved reference: g">g</error>  { workingSet, customer ->
    }
}
